--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -66,35 +66,35 @@
               <div class="title">Output</div>
               <div class="row">
                   <div class="label">Red</div>
-                  <input type="text">
-                  <input type="text">
-                  <input type="text">
-                  <input type="text">
-                  <input type="text">
+                  <input [value]="matrixService.matrix[0]" type="text">
+                  <input [value]="matrixService.matrix[1]" type="text">
+                  <input [value]="matrixService.matrix[2]" type="text">
+                  <input [value]="matrixService.matrix[3]" type="text">
+                  <input [value]="matrixService.matrix[4]" type="text">
               </div>
               <div class="row">
                   <div class="label">Green</div>
-                  <input type="text">
-                  <input type="text">
-                  <input type="text">
-                  <input type="text">
-                  <input type="text">
+                  <input [value]="matrixService.matrix[5]" type="text">
+                  <input [value]="matrixService.matrix[6]" type="text">
+                  <input [value]="matrixService.matrix[7]" type="text">
+                  <input [value]="matrixService.matrix[8]" type="text">
+                  <input [value]="matrixService.matrix[9]" type="text">
               </div>
               <div class="row">
                   <div class="label">Blue</div>
-                  <input type="text">
-                  <input type="text">
-                  <input type="text">
-                  <input type="text">
-                  <input type="text">
+                  <input [value]="matrixService.matrix[10]" type="text">
+                  <input [value]="matrixService.matrix[11]" type="text">
+                  <input [value]="matrixService.matrix[12]" type="text">
+                  <input [value]="matrixService.matrix[13]" type="text">
+                  <input [value]="matrixService.matrix[14]" type="text">
               </div>
               <div class="row">
                   <div class="label">Alpha</div>
-                  <input type="text">
-                  <input type="text">
-                  <input type="text">
-                  <input type="text">
-                  <input type="text">
+                  <input [value]="matrixService.matrix[15]" type="text">
+                  <input [value]="matrixService.matrix[16]" type="text">
+                  <input [value]="matrixService.matrix[17]" type="text">
+                  <input [value]="matrixService.matrix[18]" type="text">
+                  <input [value]="matrixService.matrix[19]" type="text">
               </div>
               <div (click)="toggle('outputExpanded')" [ngClass]="{'collapsed': !outputExpanded}" class="arrow"></div>
           </div>
