added pixi service

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -227,6 +227,10 @@ $darkGrey: #3f3f3f;
         }
       }
 
+      .button-container {
+        margin: 20px 15px 0 15px;
+      }
+
       .arrow {
         position: absolute;
         background-image: url(../../assets/svg/angle-right-solid.svg);
