--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div [ngClass]="{'expand': sidenavState}" class="sidenav">
         <div (click)="chooseSpriteImage()" class="item">Choose Sprite Image</div>
         <div (click)="chooseOverlayImage()" class="item">Choose Overlay Image</div>
-        <div class="item">Choose Comparison Image</div>
+        <div (click)="chooseComparisionImage()" class="item">Choose Comparison Image</div>
     </div>
     <div class="header">
         <div (click)="toggle('sidenavState')" class="bars"></div>
@@ -214,6 +214,9 @@
                     <input [value]="matrixService.matrix[18]" type="text">
                     <input [value]="matrixService.matrix[19]" type="text">
                 </div>
+                <div class="button-container">
+                    <button>Download JSON</button>
+                </div>
                 <div (click)="toggle('outputExpanded')" [ngClass]="{'collapsed': !outputExpanded}" class="arrow"></div>
             </div>
         </div>
@@ -226,4 +229,5 @@
 <div class="hidden">
     <input id="spriteInput" (change)="chooseSpriteImageListener($event)" type="file">
     <input id="overlayInput" (change)="chooseOverlayImageListener($event)" type="file">
+    <input id="comparisionInput" (change)="chooseComparisionImageListener($event)" type="file">
 </div>
