--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -229,6 +229,10 @@ $darkGrey: #3f3f3f;
 
       .button-container {
         margin: 20px 15px 0 15px;
+
+        button {
+          margin-right: 5px;
+        }
       }
 
       .arrow {
