changed standard view in pixi service

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
         <div (click)="chooseSpriteImage()" class="item">Choose Sprite Image</div>
         <div (click)="chooseOverlayImage()" class="item">Choose Overlay Image</div>
         <div (click)="chooseComparisionImage()" class="item">Choose Comparison Image</div>
+        <div class="item">Import JSON</div>
     </div>
     <div class="header">
         <div (click)="toggle('sidenavState')" class="bars"></div>
